Made several enhancements to home page and added mods modals

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>eOffer/eMod</title>
+  <title>Vendor Portal</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">	
+  <link rel="icon" type="image/x-icon" href="./assets/images/star-mark-80.png">	
 </head>
 <body id="top" style="display: block; height: 100%;">
-	<!--<a href="#top" class="fixedbutton"><span class="fal fa-chevron-up"></span></a>-->
 	<app-root></app-root>
 </body>
 </html>
